wip: added more model classes
