# src/main/kotlin/org/openklips/server/dto/AddressDtoAssembler.kt
@@ -3,13 +3,17 @@ package org.openklips.server.dto
 import org.openklips.server.model.Address
 import org.openklips.server.model.dto.AddressDto
 
-class AddressDtoAssembler: DtoAssembler<Address, AddressDto> {
+class AddressDtoAssembler : DtoAssembler<Address, AddressDto> {
 
     override fun assemble(source: Address): AddressDto {
         val addressDto = AddressDto()
         addressDto.country = source.country
         addressDto.city = source.city
-        // TODO: ...
+        addressDto.id = source.id
+        addressDto.zipCode = source.zipCode
+        addressDto.streetName = source.streetName
+        addressDto.houseNumber = source.houseNumber
+        addressDto.additionalDetails = source.additionalDetails
         return addressDto
     }
 
